fix: align all text to center

--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -25,6 +25,10 @@ img {
   background: #eee;
 }
 
+body {
+  text-align: center;
+}
+
 .fruits-container {
   display: flex;
   justify-content: center;
